# RobotSumo-RL

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  cross_play.py  elo_tournament.py  manual_test.py  pyproject.toml  rewards.py  test_human.py  train.py  train_A2C.py  train_PPO.py
docs/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pl.md  README.ru.md  README.zh-CN.md
env/: config.py  renderer.py  robot.py  sumo_env.py
models/favourite/A2C/: model_v425.pt  model_v426.pt  model_v427.pt
models/favourite/PPO/: model_v43.pt  model_v44.pt  model_v45.pt
models/favourite/SAC/: model_v21.pt  model_v22.pt  model_v23.pt
results/: tournament_elo_20260105_203737.txt  tournament_elo_20260105_205043.txt  tournament_elo_20260105_210149.txt  tournament_elo_20260106_000516.txt  tournament_elo_20260106_001257.txt
src/agents/A2C/: agent.py  networks.py  rewards.py  test_A2C.py  trainer.py
src/agents/PPO/: agent.py  networks.py  rewards.py  test_PPO.py  trainer.py
src/agents/SAC/: agent.py  networks.py  rewards.py  test_SAC.py  trainer.py
src/agents/a2c/: networks.py  rewards.py  trainer.py
src/agents/ppo/: rewards.py  trainer.py
src/common/: cross_play.py  elo_tournament.py  mlflow_utils.py  tournament_plots.py
src/env/: collisions.py  config.py  renderer.py  robot.py  sumo_env.py
